--- a/career.html
+++ b/career.html
@@ -2,18 +2,19 @@
 
 <html>
     <head>
-        <title>Daniel Ng - Work Experience</title>
+        <title>Terry Li - Work Experience</title>
         <link rel="stylesheet" href="https://use.typekit.net/kwf1fnc.css">
         <link rel="stylesheet" href="style.css" />
-        <link rel="icon" type="image/x-icon" href="/img/favicon.ico">
+        <link rel="icon" type="image/x-icon" href="/img/placeholder.png">
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <script src="menubar.js"></script>
     </head>
     <body>
         <header class="navi" id="navbar">
-            <h1 id="homelink"><a href="index.html">Daniel Ng</a></h1>
-            <h1 id="plaintitle">Daniel Ng</h1>
+            <h1 id="homelink"><a href="index.html">Terry Li</a></h1>
+            <h1 id="plaintitle">Terry Li</h1>
             <a href="javascript:void(0);" class="menu" onclick="showNavi()">
+                aaaaa
                 <img src="img/icons/menu.svg" />
             </a>
             <nav>
@@ -26,92 +27,64 @@
         </header>
 
         <h1 class="mainheader">Work Experience</h1>
-
         <div class="left content">
-            <img src="img/presto.png" />
-            <h2>Meta &#8211; Software Engineering Intern</h2>
+            <a href="https://cmu-17-214.github.io/s2023/"><img src="img/s3d.jpeg" /></a>
+            <h2>Carnegie Mellon University <br> Teaching Assistant for 17-214: <br> Principles of Software Construction: Objects, Design, and Concurrency</h2>
             <p>
-            <i class="subtitle">Menlo Park, CA  &#8226;  May - August 2022</i>
+            <i class="subtitle">Pittsburgh, PA  &#8226;  Jan. 2022 - May 2022 (Expected)</i>
             <br />
             <br />
-            Worked as a software engineering intern on the Presto team,
-            which develops a database query engine for distributed systems.
-            My work was centred around speeding up Velox, the back-end
-            vectorized database acceleration library that handled execution on
-            worker nodes, and increasing the efficiency of certain types of row
-            filters.
+            <ul>
+                <li>Implemented 10+ responsive static web page designs using HTML5, CSS3, JavaScript, jQuery, and Bootstrap framework to enable company rebranding and attracted 500+ new potential users</li>
+                <li>Created pipeline to validate user inputted contact information using JavaScript and store it in a Google Sheet</li>
+                <li>Automated MySQL database backup and other internal tasks periodically using bash scripts and Cron Job</li>
+                <li>Compiled release notes for each iteration to be published onto the webpage to announce recent updates</li>
+            </ul>
             </p>
         </div>
 
         <div class="right content">
-            <img src="img/dragon.png" />
-            <h2>Carnegie Mellon University &#8211; 15-210 Head Teaching Assistant</h2>
+            <a href="https://github.com/touretzkyds/KnowledgeGraphDemo/commit/1351dc4ac5f9ee4ae20e7c3e736e669ee0241078"><img src="img/dragon.png" /></a>
+            <h2>Carnegie Mellon University <br> Software Engineer Intern</h2>
             <p>
-            <i class="subtitle">Pittsburgh, PA &#8226; January 2022 - Present</i>
+            <i class="subtitle">Pittsburgh, PA &#8226; Sep. 2022 - Jan. 2023</i>
             <br />
             <br />
-            Currently serving as a head teaching assistant for 15-210 Parallel and
-            Sequential Data Structures and Algorithms, the introductory algorithms
-            class at CMU. As head TA, I organize the staff and coordinate logistics.
-            I also contribute to content development and homework refinement to
-            maximize student learning. I also lead recitations of 30+ students.
+            <ul>
+                <li>Created and maintained RDF Triplestore database of USA administrative divisions data on CMU server using Terse RDF Triple Language</li>
+                <li>Build interactive knowledge graph website to display USA administrative divisions data queried by SPARQL with smooth navigation using JavaScript, jQuery, Cytoscape.js with Cola.js extension</li>
+                <li>Clean up legacy code and documents and present weekly progress reports</li>
+            </ul>
             </p>
         </div>
 
         <div class="left content">
-            <img src="img/cmu.png" />
-            <h2>Carnegie Mellon University &#8211; 15-122 Teaching Assistant</h2>
-
+            <a href="https://tutors.plus/"><img src="img/plus.svg" /></a>
+            <h2>PLUS - Personalized Learning Squared <br> Software Engineer Intern</h2>
             <p>
-            <i class="subtitle">Pittsburgh, PA &#8226; July - December 2021</i>
+            <i class="subtitle">Remote  &#8226;  May. 2022 - Sep. 2022</i>
             <br />
             <br />
-            Served as a teaching assistant for 15-122 Principles of Imperative
-            Computation, an introductory programming class for first-year CS
-            students at CMU. As a TA, I led weekly labs and recitations to teach
-            fundamentals of the C programming language to 30+ students, and graded
-            over 400 written assignments along with the other TAs every week.
+            <ul>
+                <li>Implemented 10+ responsive static web page designs using HTML5, CSS3, JavaScript, jQuery, and Bootstrap framework to enable company rebranding and attracted 500+ new potential users</li>
+                <li>Created pipeline to validate user inputted contact information using JavaScript and store it in a Google Sheet</li>
+                <li>Automated MySQL database backup and other internal tasks periodically using bash scripts and Cron Job</li>
+                <li>Compiled release notes for each iteration to be published onto the webpage to announce recent updates</li>
+            </ul>
             </p>
         </div>
-
-        <div class="right content">
-            <img src="img/apl.jpeg" />
-            <h2>University of Washington &#8211; Software Development Intern</h2>
-            <p>
-            <i class="subtitle">Seattle, WA &#8226; June - August 2019, June - August 2020</i>
-            <br />
-            <br />
-            Interned at the University of Washington Applied Physics Lab for two
-            separate summers, working on a team investigating plane-wave ultrasound
-            technologies and their uses in neuroscience.
-            <br /> <br />
-            The first summer, I was tasked with optimizing MATLAB
-            code for reconstructing images from raw ultrasound scan data. By
-            exploiting parallelism and rewriting parts of the MATLAB script in C, I
-            was able to make reconstructions run 20 times faster while maintaining
-            the same image quality. I also investigated and built network-attached
-            storage systems for storing scan data.
-            <br /> <br />
-            The second summer, I ran reconstruction scripts on scan data to
-            generate images, which were then used in publications by my research
-            supervisor. I also created a Python tool which allowed users to click
-            on two points within an image and find the velocity of blood flow across
-            the blood vessel between them from the scan data.
-            </p>
-        </div>
-
         <footer>
             <p>
-            <a href="mailto:danielzkng0@gmail.com">
+            <a href="mailto:jielinl@andrew.cmu.edu" target="blank">
                 <img src="img/icons/mail.svg" title="Email" alt="Email" class="icon" />
             </a>
-            <a href="https://www.linkedin.com/in/danielzkng/">
+            <a href="https://www.linkedin.com/in/terry-li-703540202/" target="blank">
                 <img src="img/icons/linkedin.svg" title="LinkedIn" alt="LinkedIn" class="icon" />
             </a>
-            <a href="https://github.com/danielzkng">
+            <a href="https://github.com/terryyLi" target="blank">
                 <img src="img/icons/github.svg" title="GitHub" alt="GitHub" class="icon" />
             </a>
-            <a href="resume.pdf">
+            <a href="resume.pdf" target="blank">
                 <img src="img/icons/resume.svg" title="Resume" alt="Resume" class="icon" />
             </a>
             </p>
