--- a/education.html
+++ b/education.html
@@ -2,17 +2,17 @@
 
 <html>
     <head>
-        <title>Daniel Ng - Education</title>
+        <title>Terry Li - Education</title>
         <link rel="stylesheet" href="https://use.typekit.net/kwf1fnc.css">
         <link rel="stylesheet" href="style.css" />
-        <link rel="icon" type="image/x-icon" href="/img/favicon.ico">
+        <link rel="icon" type="image/x-icon" href="/img/placeholder.png">
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <script src="menubar.js"></script>
     </head>
     <body>
         <header class="navi" id="navbar">
-            <h1 id="homelink"><a href="index.html">Daniel Ng</a></h1>
-            <h1 id="plaintitle">Daniel Ng</h1>
+            <h1 id="homelink"><a href="index.html">Terry Li</a></h1>
+            <h1 id="plaintitle">Terry Li</h1>
             <a href="javascript:void(0);" class="menu" onclick="showNavi()">
                 <img src="img/icons/menu.svg" />
             </a>
@@ -32,52 +32,26 @@
             <h2>Carnegie Mellon University</h2>
 
             <p>
-                <i class="subtitle">B.S. in Computer Science, 2020-2024</i>
+                <i class="subtitle">B.S. in Information Systems, 2021-2025</i>
                 <br /><br />
                 I am currently pursuing my undergraduate degree at Carnegie Mellon
-                University's School of Computer Science. So far, I have taken
-                courses in artificial intelligence, computer systems, algorithms,
-                and theoretical computer science. In the future, I intend to take
-                courses focusing on functional programming, type theory, and more
-                generally, programming language theory.
+                University majoring Information Systems and minoring in computer science
+                and software engineering.
             </p>
-        </div>
-
-        <div class="big right content">
-            <img src="img/inglemoor.jpeg" />
-            <h2>Inglemoor High School</h2>
-
-            <p>
-                <i class="subtitle">International Baccalaureate Diploma, 2016-2020</i>
-                <br /><br />
-                I earned an International Baccalaureate diploma during high school,
-                as well as a diploma from the Northshore School District. My final
-                IB score was a 41 out of a possible 45 points, including the maximum
-                score of 7 on the Mathematics Higher Level, Physics Higher Level,
-                and Computer Science Standard Level exams.
-            </p>
-        </div>
-
-        <div class="content">
-            <h1>Research</h1>
-
-            <p>While my initial research has been in biomedical engineering and
-            neuroscience, I hope to soon get into research in the field of
-            programming language theory.</p>
         </div>
 
         <footer>
             <p>
-            <a href="mailto:danielzkng0@gmail.com">
+            <a href="mailto:jielinl@andrew.cmu.edu" target="blank">
                 <img src="img/icons/mail.svg" title="Email" alt="Email" class="icon" />
             </a>
-            <a href="https://www.linkedin.com/in/danielzkng/">
+            <a href="https://www.linkedin.com/in/terry-li-703540202/" target="blank">
                 <img src="img/icons/linkedin.svg" title="LinkedIn" alt="LinkedIn" class="icon" />
             </a>
-            <a href="https://github.com/danielzkng">
+            <a href="https://github.com/terryyLi" target="blank">
                 <img src="img/icons/github.svg" title="GitHub" alt="GitHub" class="icon" />
             </a>
-            <a href="resume.pdf">
+            <a href="resume.pdf" target="blank">
                 <img src="img/icons/resume.svg" title="Resume" alt="Resume" class="icon" />
             </a>
             </p>
