--- a/index.html
+++ b/index.html
@@ -2,17 +2,17 @@
 
 <html>
     <head>
-        <title>Daniel Ng</title>
+        <title>Terry Li</title>
         <link rel="stylesheet" href="https://use.typekit.net/kwf1fnc.css" />
         <link rel="stylesheet" href="style.css" />
-        <link rel="icon" type="image/x-icon" href="img/favicon.ico" />
+        <link rel="icon" type="image/x-icon" href="img/placeholder.png" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <script src="menubar.js"></script>
     </head>
     <body>
         <header class="navi" id="navbar">
-            <h1 id="homelink"><a href="index.html">Daniel Ng</a></h1>
-            <h1 id="plaintitle">Daniel Ng</h1>
+            <h1 id="homelink"><a href="index.html">Terry Li</a></h1>
+            <h1 id="plaintitle">Terry Li</h1>
             <a href="javascript:void(0);" class="menu" onclick="showNavi()">
                 <img src="img/icons/menu.svg" />
             </a>
@@ -26,23 +26,21 @@
         </header>
 
         <div class="big left content">
-            <img src="img/daniel.jpg" />
-            <h1 class="mainheader">Daniel Ng</h1>
+            <img src="img/terry.jpg" />
+            <h1 class="mainheader">Terry Li</h1>
             <p>
-               Hello! I'm Daniel, a rising junior at Carnegie Mellon University
-               majoring in computer science. More specifically, I am interested in
-               studying programming language theory, type theory and algorithms. I
-               also have considerable experience with computer systems, having
-               worked on code optimization at the University of Washington and later
-               on database systems at Meta.
-            </p>
-            <p>
-                Outside of work, I enjoy cooking, running, and playing the piano.
-                I help to coordinate <a href="https://cmimconline.org/">CMIMC</a>,
-                which runs annual math and programming contests for high school
-                students. I am also passionate about teaching
-                computer science and have served as a CMU undergraduate teaching
-                assistant for over a year.
+               Hello! I'm Terry, a rising junior at Carnegie Mellon University
+               majoring in Information Systems, and I am interested in
+               studying Software engineering. I
+               also have considerable experience with web development, having
+               worked on front end development at an Ed-tech startup and later build knowledge graph demo 
+               at Carnegie Mellon University School of Computer Science. Currently I'm TAing for the most
+               popular software engineering class in CMU: <i><b>Principles of Software Construction: Objects, Design, and Concurrency</b></i>,
+               and I'm also taking software engineering classes like:
+               <i>Software Engineering For Startup</i>, 
+               <i>Foundations Of Software Engineering</i>,
+               <i>Application Design and Development</i>,
+               <i>The Softer Side Of Software Engineering</i>.
             </p>
         </div>
 
@@ -51,37 +49,37 @@
                 Through my various <a href="projects.html">projects</a> and
                 <a href="career.html">work experiences</a>, I have experience
                 working with the following programming languages and technologies:
-                <ul id="skills">
-                    <li>C</li>
-                    <li>C++</li>
-                    <li>C#</li>
-                    <li>Standard ML</li>
-                    <li>OCaml</li>
-                    <li>Java</li>
-                    <li>Go</li>
-                    <li>Python</li>
-                    <li>SQL</li>
-                    <li>JavaScript</li>
+                <ul>
                     <li>HTML</li>
                     <li>CSS</li>
-                    <li>MATLAB</li>
-                    <li>Assembly</li>
+                    <li>JavaScript</li>
+                    <li>TypeScript</li>
+                    <li>Bootstrap</li>
+                    <li>React</li>
+                    <li>Java</li>
+                    <li>Python</li>
+                    <li>SQL</li>
+                    <li>MongoDB</li>
+                    <li>PostgreSQL</li>
+                    <li>Google Cloud</li>
+                    <li>Standard ML</li>
+                    <li>REST API</li>
                 </ul>
             </p>
         </div>
 
         <footer>
             <p>
-            <a href="mailto:danielzkng0@gmail.com">
+            <a href="mailto:jielinl@andrew.cmu.edu" target="blank">
                 <img src="img/icons/mail.svg" title="Email" alt="Email" class="icon" />
             </a>
-            <a href="https://www.linkedin.com/in/danielzkng/">
+            <a href="https://www.linkedin.com/in/terry-li-703540202/" target="blank">
                 <img src="img/icons/linkedin.svg" title="LinkedIn" alt="LinkedIn" class="icon" />
             </a>
-            <a href="https://github.com/danielzkng">
+            <a href="https://github.com/terryyLi" target="blank">
                 <img src="img/icons/github.svg" title="GitHub" alt="GitHub" class="icon" />
             </a>
-            <a href="resume.pdf">
+            <a href="resume.pdf" target="blank">
                 <img src="img/icons/resume.svg" title="Resume" alt="Resume" class="icon" />
             </a>
             </p>
