--- a/projects.html
+++ b/projects.html
@@ -2,17 +2,17 @@
 
 <html>
     <head>
-        <title>Daniel Ng - Projects</title>
+        <title>Terry Li - Projects</title>
         <link rel="stylesheet" href="https://use.typekit.net/kwf1fnc.css">
         <link rel="stylesheet" href="style.css" />
-        <link rel="icon" type="image/x-icon" href="/img/favicon.ico">
+        <link rel="icon" type="image/x-icon" href="/img/placeholder.png">
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <script src="menubar.js"></script>
     </head>
     <body>
         <header class="navi" id="navbar">
-            <h1 id="homelink"><a href="index.html">Daniel Ng</a></h1>
-            <h1 id="plaintitle">Daniel Ng</h1>
+            <h1 id="homelink"><a href="index.html">Terry Li</a></h1>
+            <h1 id="plaintitle">Terry Li</h1>
             <a href="javascript:void(0);" class="menu" onclick="showNavi()">
                 <img src="img/icons/menu.svg" />
             </a>
@@ -28,87 +28,57 @@
         <h1 class="mainheader">Projects</h1>
 
         <div class="left content">
-            <img src="img/velox.svg" class="whitebg" />
-            <h2>Velox</h2>
+            <a href="https://github.com/CMU-17-214/hw3-santorini-terryyLi"><img src="img/santorini.webp" class="whitebg" /></a>
+            <h2>Santorini Game</h2>
             <p>
-                Velox is an open-source vectorized database acceleration library
-                that I contributed to during my time at Meta.
-                <a href="https://github.com/facebookincubator/velox">GitHub</a>
+                Full-stack web app game Santorini extensible for God cards and AI players with Java and TypeScript
             </p>
         </div>
 
         <div class="right content">
-            <img src="img/proxy.png" />
-            <h2>Proxy Server</h2>
+            <a href="https://github.com/CMU-17-214/hw6-analytics-framework-mickeymiaomiao-house"><img src="img/text_classification.png" /></a>
+            <h2>Text Classification Visualization Framework</h2>
             <p>
-                A proxy server made for CMU's 15-213 class that supports
-                multithreading and caches recent results.
+                Extensible black-box data visualization framework classifying texts from articles which supports data plugins extract texts; display plugins visualize entity analysis using Java and TypeScript
             </p>
         </div>
 
         <div class="left content">
-            <img src="img/malloc.png" />
-            <h2>Dynamic Memory Allocator</h2>
+            <a href="https://github.com/terryyLi/Youtube-Database"><img src="img/youtube.png" /></a>
+            <h2>YouTube Database</h2>
             <p>
-                My own implementation of the stdlib malloc, calloc, and free
-                functions that outperforms the library implementations, made for
-                15-213.
+                Re-engineered early stages of YouTube database with a team of three explored development lifecycle
             </p>
         </div>
 
         <div class="right content">
-            <img src="img/rat.png" />
-            <h2>Blood Vessel Velocity Tool</h2>
+            <a href="https://github.com/terryyLi/AI_Bomberman"></a><img src="img/bombermen.jpeg" />
+            <h2>AI Bomberman</h2>
             <p>
-                A tool made in Python designed to take a frame of an ultrasound
-                scan and allow researchers to determine the velocity of blood
-                through a blood vessel by clicking on it.
+                Bomberman game with AI player to visualize pathfinding algorithms from scratch using Python.
             </p>
         </div>
 
         <div class="left content">
-            <img src="img/tsa.png" />
-            <h2>EduTalk</h2>
+            <a href="https://github.com/terryyLi/Pamela-s-website"><img src="img/pamela.webp" /></a>
+            <h2>Pamela's Diner</h2>
             <p>
-                EduTalk is a centralized message board, calendar, and assignment
-                software designed for schools. Earned 5th place at the Technology
-                Student Association 2019 national conference in Software Development.
-            </p>
-        </div>
-
-        <div class="right content">
-            <img src="img/minotaur.png" />
-            <h2>Hunt the Minotaur</h2>
-            <p>
-                A Greek mythology-themed "Hunt the Wumpus" game made in Unity
-                during my sophomore year of high school.
-                The game won the runner-up award at an annual contest held at
-                Microsoft.
-            </p>
-        </div>
-
-        <div class="left content">
-            <img src="img/studylink.png" />
-            <h2>StudyLink</h2>
-            <p>
-                StudyLink is a social media application to help students find nearby
-                study groups that earned my team 4th place at the TSA National
-                Conference in June 2018.
+                Renovated Pamela's Diner's website from scratch using HTML5, CSS3, and JavaScript.
             </p>
         </div>
 
         <footer>
             <p>
-            <a href="mailto:danielzkng0@gmail.com">
+            <a href="mailto:jielinl@andrew.cmu.edu" target="blank">
                 <img src="img/icons/mail.svg" title="Email" alt="Email" class="icon" />
             </a>
-            <a href="https://www.linkedin.com/in/danielzkng/">
+            <a href="https://www.linkedin.com/in/terry-li-703540202/" target="blank">
                 <img src="img/icons/linkedin.svg" title="LinkedIn" alt="LinkedIn" class="icon" />
             </a>
-            <a href="https://github.com/danielzkng">
+            <a href="https://github.com/terryyLi" target="blank">
                 <img src="img/icons/github.svg" title="GitHub" alt="GitHub" class="icon" />
             </a>
-            <a href="resume.pdf">
+            <a href="resume.pdf" target="blank">
                 <img src="img/icons/resume.svg" title="Resume" alt="Resume" class="icon" />
             </a>
             </p>
