updated TA description

--- a/career.html
+++ b/career.html
@@ -35,10 +35,7 @@
             <br />
             <br />
             <ul>
-                <li>Implemented 10+ responsive static web page designs using HTML5, CSS3, JavaScript, jQuery, and Bootstrap framework to enable company rebranding and attracted 500+ new potential users</li>
-                <li>Created pipeline to validate user inputted contact information using JavaScript and store it in a Google Sheet</li>
-                <li>Automated MySQL database backup and other internal tasks periodically using bash scripts and Cron Job</li>
-                <li>Compiled release notes for each iteration to be published onto the webpage to announce recent updates</li>
+                <li>Taught weekly interactive recitation, held one to one office hours with students and answered questions on Piazza</li>
             </ul>
             </p>
         </div>
