fixed small bug in nav bar and added project sql backup

--- a/projects.html
+++ b/projects.html
@@ -67,6 +67,14 @@
             </p>
         </div>
 
+        <div class="right content">
+            <a href="https://github.com/terryyLi/MySQL_backup"><img src="img/sql_backup.png" /></a>
+            <h2>SQL Backup</h2>
+            <p>
+                A shell script to backup MySQL database automatically
+            </p>
+        </div>
+
         <footer>
             <p>
             <a href="mailto:jielinl@andrew.cmu.edu" target="blank">
