added links to title

--- a/career.html
+++ b/career.html
@@ -27,8 +27,8 @@
 
         <h1 class="mainheader">Work Experience</h1>
         <div class="left content">
-            <a href="https://cmu-17-214.github.io/s2023/"><img src="img/s3d.jpeg" /></a>
-            <h2>Carnegie Mellon University <br> Teaching Assistant for 17-214: <br> Principles of Software Construction: Objects, Design, and Concurrency</h2>
+            <a href="https://cmu-17-214.github.io/s2023/" target="_blank"><img src="img/s3d.jpeg" /></a>
+            <h2><a href="https://cmu-17-214.github.io/s2023/" target="_blank">Carnegie Mellon University <br> Teaching Assistant for 17-214: <br> Principles of Software Construction: Objects, Design, and Concurrency</a></h2>
             <p>
             <i class="subtitle">Pittsburgh, PA  &#8226;  Jan. 2022 - May 2022 (Expected)</i>
             <br />
@@ -40,8 +40,8 @@
         </div>
 
         <div class="right content">
-            <a href="https://github.com/touretzkyds/KnowledgeGraphDemo/commit/1351dc4ac5f9ee4ae20e7c3e736e669ee0241078"><img src="img/dragon.png" /></a>
-            <h2>Carnegie Mellon University <br> Software Engineer Intern</h2>
+            <a href="https://github.com/touretzkyds/KnowledgeGraphDemo/commit/1351dc4ac5f9ee4ae20e7c3e736e669ee0241078" target="_blank"><img src="img/dragon.png" /></a>
+            <h2><a href="https://github.com/touretzkyds/KnowledgeGraphDemo/commit/1351dc4ac5f9ee4ae20e7c3e736e669ee0241078" target="_blank">Carnegie Mellon University <br> Software Engineer Intern</a></h2>
             <p>
             <i class="subtitle">Pittsburgh, PA &#8226; Sep. 2022 - Jan. 2023</i>
             <br />
@@ -55,8 +55,8 @@
         </div>
 
         <div class="left content">
-            <a href="https://tutors.plus/"><img src="img/plus.svg" /></a>
-            <h2>PLUS - Personalized Learning Squared <br> Software Engineer Intern</h2>
+            <a href="https://tutors.plus/" target="_blank"><img src="img/plus.svg" /></a>
+            <h2><a href="https://tutors.plus/" target="_blank">PLUS - Personalized Learning Squared <br> Software Engineer Intern</a></h2>
             <p>
             <i class="subtitle">Remote  &#8226;  May. 2022 - Sep. 2022</i>
             <br />
@@ -71,16 +71,16 @@
         </div>
         <footer>
             <p>
-            <a href="mailto:jielinl@andrew.cmu.edu" target="blank">
+            <a href="mailto:jielinl@andrew.cmu.edu" target="_blank">
                 <img src="img/icons/mail.svg" title="Email" alt="Email" class="icon" />
             </a>
-            <a href="https://www.linkedin.com/in/terry-li-703540202/" target="blank">
+            <a href="https://www.linkedin.com/in/terry-li-703540202/" target="_blank">
                 <img src="img/icons/linkedin.svg" title="LinkedIn" alt="LinkedIn" class="icon" />
             </a>
-            <a href="https://github.com/terryyLi" target="blank">
+            <a href="https://github.com/terryyLi" target="_blank">
                 <img src="img/icons/github.svg" title="GitHub" alt="GitHub" class="icon" />
             </a>
-            <a href="resume.pdf" target="blank">
+            <a href="resume.pdf" target="_blank">
                 <img src="img/icons/resume.svg" title="Resume" alt="Resume" class="icon" />
             </a>
             </p>
