--- a/education.html
+++ b/education.html
@@ -29,7 +29,7 @@
 
         <div class="left content">
             <img src="img/cmu.png" />
-            <h2>Carnegie Mellon University</h2>
+            <h2><a href="https://www.cmu.edu/" target="_blank">Carnegie Mellon University</a></h2>
 
             <p>
                 <i class="subtitle">B.S. in Information Systems, 2021-2025</i>
@@ -42,16 +42,16 @@
 
         <footer>
             <p>
-            <a href="mailto:jielinl@andrew.cmu.edu" target="blank">
+            <a href="mailto:jielinl@andrew.cmu.edu" target="_blank">
                 <img src="img/icons/mail.svg" title="Email" alt="Email" class="icon" />
             </a>
-            <a href="https://www.linkedin.com/in/terry-li-703540202/" target="blank">
+            <a href="https://www.linkedin.com/in/terry-li-703540202/" target="_blank">
                 <img src="img/icons/linkedin.svg" title="LinkedIn" alt="LinkedIn" class="icon" />
             </a>
-            <a href="https://github.com/terryyLi" target="blank">
+            <a href="https://github.com/terryyLi" target="_blank">
                 <img src="img/icons/github.svg" title="GitHub" alt="GitHub" class="icon" />
             </a>
-            <a href="resume.pdf" target="blank">
+            <a href="resume.pdf" target="_blank">
                 <img src="img/icons/resume.svg" title="Resume" alt="Resume" class="icon" />
             </a>
             </p>
