--- a/projects.html
+++ b/projects.html
@@ -28,48 +28,48 @@
         <h1 class="mainheader">Projects</h1>
 
         <div class="left content">
-            <a href="https://github.com/CMU-17-214/hw3-santorini-terryyLi"><img src="img/santorini.webp" class="whitebg" /></a>
-            <h2>Santorini Game</h2>
+            <a href="https://github.com/CMU-17-214/hw3-santorini-terryyLi" target="_blank"><img src="img/santorini.webp" class="whitebg" /></a>
+            <h2><a href="https://github.com/CMU-17-214/hw3-santorini-terryyLi" target="_blank">Santorini Game</a></h2>
             <p>
                 Full-stack web app game Santorini extensible for God cards and AI players with Java and TypeScript
             </p>
         </div>
 
         <div class="right content">
-            <a href="https://github.com/CMU-17-214/hw6-analytics-framework-mickeymiaomiao-house"><img src="img/text_classification.png" /></a>
-            <h2>Text Classification Visualization Framework</h2>
+            <a href="https://github.com/CMU-17-214/hw6-analytics-framework-mickeymiaomiao-house" target="_blank"><img src="img/text_classification.png" /></a>
+            <h2><a href="https://github.com/CMU-17-214/hw6-analytics-framework-mickeymiaomiao-house" target="_blank">Text Classification Visualization Framework</a></h2>
             <p>
                 Extensible black-box data visualization framework classifying texts from articles which supports data plugins extract texts; display plugins visualize entity analysis using Java and TypeScript
             </p>
         </div>
 
         <div class="left content">
-            <a href="https://github.com/terryyLi/Youtube-Database"><img src="img/youtube.png" /></a>
-            <h2>YouTube Database</h2>
+            <a href="https://github.com/terryyLi/Youtube-Database" target="_blank"><img src="img/youtube.png" /></a>
+            <h2><a href="https://github.com/terryyLi/Youtube-Database" target="_blank">YouTube Database</a></h2>
             <p>
                 Re-engineered early stages of YouTube database with a team of three explored development lifecycle
             </p>
         </div>
 
         <div class="right content">
-            <a href="https://github.com/terryyLi/AI_Bomberman"></a><img src="img/bombermen.jpeg" />
-            <h2>AI Bomberman</h2>
+            <a href="https://github.com/terryyLi/AI_Bomberman" target="_blank"><img src="img/bombermen.jpeg" /></a>
+            <h2><a href="https://github.com/terryyLi/AI_Bomberman" target="_blank">AI Bomberman</a></h2>
             <p>
                 Bomberman game with AI player to visualize pathfinding algorithms from scratch using Python.
             </p>
         </div>
 
         <div class="left content">
-            <a href="https://github.com/terryyLi/Pamela-s-website"><img src="img/pamela.webp" /></a>
-            <h2>Pamela's Diner</h2>
+            <a href="https://github.com/terryyLi/Pamela-s-website" target="_blank"><img src="img/pamela.webp" /></a>
+            <h2><a href="https://github.com/terryyLi/Pamela-s-website" target="_blank">Pamela's Diner</a></h2>
             <p>
                 Renovated Pamela's Diner's website from scratch using HTML5, CSS3, and JavaScript.
             </p>
         </div>
 
         <div class="right content">
-            <a href="https://github.com/terryyLi/MySQL_backup"><img src="img/sql_backup.png" /></a>
-            <h2>SQL Backup</h2>
+            <a href="https://github.com/terryyLi/MySQL_backup" target="_blank"><img src="img/sql_backup.png" /></a>
+            <h2><a href="https://github.com/terryyLi/MySQL_backup" target="_blank">SQL Backup</a></h2>
             <p>
                 A shell script to backup MySQL database automatically
             </p>
@@ -77,16 +77,16 @@
 
         <footer>
             <p>
-            <a href="mailto:jielinl@andrew.cmu.edu" target="blank">
+            <a href="mailto:jielinl@andrew.cmu.edu" target="_blank">
                 <img src="img/icons/mail.svg" title="Email" alt="Email" class="icon" />
             </a>
-            <a href="https://www.linkedin.com/in/terry-li-703540202/" target="blank">
+            <a href="https://www.linkedin.com/in/terry-li-703540202/" target="_blank">
                 <img src="img/icons/linkedin.svg" title="LinkedIn" alt="LinkedIn" class="icon" />
             </a>
-            <a href="https://github.com/terryyLi" target="blank">
+            <a href="https://github.com/terryyLi" target="_blank">
                 <img src="img/icons/github.svg" title="GitHub" alt="GitHub" class="icon" />
             </a>
-            <a href="resume.pdf" target="blank">
+            <a href="resume.pdf" target="_blank">
                 <img src="img/icons/resume.svg" title="Resume" alt="Resume" class="icon" />
             </a>
             </p>
