--- a/index.html
+++ b/index.html
@@ -70,16 +70,16 @@
 
         <footer>
             <p>
-            <a href="mailto:jielinl@andrew.cmu.edu" target="blank">
+            <a href="mailto:jielinl@andrew.cmu.edu" target="_blank">
                 <img src="img/icons/mail.svg" title="Email" alt="Email" class="icon" />
             </a>
-            <a href="https://www.linkedin.com/in/terry-li-703540202/" target="blank">
+            <a href="https://www.linkedin.com/in/terry-li-703540202/" target="_blank">
                 <img src="img/icons/linkedin.svg" title="LinkedIn" alt="LinkedIn" class="icon" />
             </a>
-            <a href="https://github.com/terryyLi" target="blank">
+            <a href="https://github.com/terryyLi" target="_blank">
                 <img src="img/icons/github.svg" title="GitHub" alt="GitHub" class="icon" />
             </a>
-            <a href="resume.pdf" target="blank">
+            <a href="resume.pdf" target="_blank">
                 <img src="img/icons/resume.svg" title="Resume" alt="Resume" class="icon" />
             </a>
             </p>
