updated bio and tech stacks

--- a/index.html
+++ b/index.html
@@ -30,17 +30,21 @@
             <h1 class="mainheader">Terry Li</h1>
             <p>
                Hello! I'm Terry, a rising junior at Carnegie Mellon University
-               majoring in Information Systems, and I am interested in
-               studying Software engineering. I
-               also have considerable experience with web development, having
-               worked on front end development at an Ed-tech startup and later build knowledge graph demo 
-               at Carnegie Mellon University School of Computer Science. Currently I'm TAing for the most
-               popular software engineering class in CMU: <i><b>Principles of Software Construction: Objects, Design, and Concurrency</b></i>,
-               and I'm also taking software engineering classes like:
-               <i>Software Engineering For Startup</i>, 
-               <i>Foundations Of Software Engineering</i>,
-               <i>Application Design and Development</i>,
-               <i>The Softer Side Of Software Engineering</i>.
+               majoring in Information Systems, and I am passtionate about building scalable and extensible
+               softwares. I'm familiar with the entire software development
+               lifecycle and have considerable experience with full-stack web development, having
+               worked on front end development at an Ed-tech startup and later build full-stack web app
+               of knowledge graph project at Carnegie Mellon University School of Computer Science with 
+               Prof. David S. Touretzky and will intern at SRAM LLC. in Summer 2023.
+            </p>
+            <p>
+                Currently I'm TAing for the most
+                popular software engineering class in CMU: <i><b>17-214/17-514: Principles of Software Construction: Objects, Design, and Concurrency</b></i>,
+                and I'm also taking software engineering classes like:
+                <i>Software Engineering For Startup</i>,
+                <i>Foundations Of Software Engineering</i>,
+                <i>Application Design and Development</i>, and
+                <i>The Softer Side Of Software Engineering</i>,
             </p>
         </div>
 
@@ -50,19 +54,25 @@
                 <a href="career.html">work experiences</a>, I have experience
                 working with the following programming languages and technologies:
                 <ul>
-                    <li>HTML</li>
-                    <li>CSS</li>
                     <li>JavaScript</li>
                     <li>TypeScript</li>
-                    <li>Bootstrap</li>
-                    <li>React</li>
                     <li>Java</li>
                     <li>Python</li>
-                    <li>SQL</li>
-                    <li>MongoDB</li>
-                    <li>PostgreSQL</li>
-                    <li>Google Cloud</li>
                     <li>Standard ML</li>
+                    <li>Ruby</li>
+                    <li>HTML</li>
+                    <li>CSS</li>
+                    <li>SQL</li>
+                    <li>Bootstrap</li>
+                    <li>React.js</li>
+                    <li>Node.js</li>
+                    <li>Rails</li>
+                    <li>Flask</li>
+                    <li>PostgreSQL</li>
+                    <li>MongoDB</li>
+                    <li>Google Cloud</li>
+                    <li>Amazon Web Services</li>
+                    <li>Azure</li>
                     <li>REST API</li>
                 </ul>
             </p>
